# orchestrator

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
contrib/systemd/: orchestratord.service  orchestratord.socket
crates/orch/: Cargo.toml
crates/orch-core/: Cargo.toml
crates/orch-core/src/: contracts.rs  credentials.rs  engine.rs  host.rs  isolation.rs  lib.rs  metrics.rs  namespace.rs  server.rs
crates/orch-core/src/repertoire/: formation.rs  integration.rs  isolation.rs  mod.rs  provider.rs
crates/orch-core/tests/: contracts_test.rs  credentials_test.rs  duet_test.rs  engine_test.rs  hardening_test.rs  health_test.rs  host_test.rs  integration_test.rs  isolation_test.rs  metrics_test.rs  namespace_test.rs  ping_pong_test.rs  provider_discovery_test.rs  repertoire_test.rs  routes_test.rs  security_regression_test.rs  shutdown_test.rs  socket_test.rs
crates/orch-core/tests/fixtures/providers/: echo-provider.yaml  env-check-provider.yaml  failing-provider.yaml  multiline-provider.yaml  slow-provider.yaml
crates/orch/src/: client.rs  main.rs
crates/orchestratord/: Cargo.toml
crates/orchestratord/src/: main.rs
scripts/: deep-test.sh  heavy-test.sh  install.sh  smoke-test.sh
