[workspace]
members = [
    "crates/orch",
    "crates/orchestratord",
    "crates/orch-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AngryTux/orchestrator"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
axum = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sd-notify = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
landlock = "0.4"
rusqlite = { version = "0.34", features = ["bundled"] }
