[package]
name = "orch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Orchestrator — contracts, config, isolation, providers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
landlock = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
hyper = { workspace = true }
hyper-util = { workspace = true }
