[package]
name = "orch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Orchestrator CLI — HTTP client for orchestratord"

[[bin]]
name = "orch"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
